added ddg support and updated documentation

--- a/help.html
+++ b/help.html
@@ -41,6 +41,7 @@ under the License.
 								<li>Reddit search - type "-r (search query)"</li>
 								<li>Twitter search - type "-t (search query)"</li>
 								<li>Amazon search - type "-a (search query)"</li>
+								<li>DuckDuckGo search - type "-d (search query)"</li>
 							</ul>
 							<h3>Void commands</h3>
 							<ul>
